@@ -1,4 +1,4 @@
-trivysummary.version=1.1.0
+trivysummary.version=1.1.1
 
 logging.level.root=ERROR
 
