@@ -19,6 +19,9 @@
     <span th:if="${comparisonMayNotBeForSameArtefact}">
         <p><b>WARNING: Artefact names do not indicate these are scans of the same component - comparison may not be valid</b></p>
     </span>
+    <span th:if="${whitelistedVulnerabilities.hasUnapprovedEntries() || whitelistedVulnerabilities.hasEntriesRequiringReview()}">
+        <p><b>WARNING: Some <a href="#whitelistedVulnerabilities">whitelisted vulnerabilities</a> require review and/or approval.</b></p>
+    </span>
 
     <p>
         <ul>
@@ -120,7 +123,7 @@
                 <td><span th:text="${vulnerability.whitelistingReason}">This is the whitelisting justification</span></td>
                 <td th:if="${vulnerability.requiresReview()}"><b>OVERDUE</b></td>
                 <td th:if="${!vulnerability.requiresReview()}"><span th:text="${vulnerability.nextReviewDate}">Review date</span></td>
-                <td th:if="${!vulnerability.isApproved()}"><b>URGENT - REQUIRES APPROVAL</b></td>
+                <td th:if="${!vulnerability.isApproved()}"><b>REQUIRES APPROVAL</b></td>
                 <td th:if="${vulnerability.isApproved()}"><span th:text="${vulnerability.approvedBy}">Approver</span><br/><span th:text="${vulnerability.approvalDate}">Approval date</span></td>
             </tr>
         </tbody>
