@@ -16,6 +16,9 @@
     <p th:text="|Report date is ${new java.util.Date().toString()}|">Report date is ...</p>
     <p th:text="|Trivy scan conducted ${scanDate}.|">Today is ...</p>
     <p>Artefact scanned is <b><span th:text="${artefactName}" /></b> of type <b><span th:text="${artefactType}" /></b></p>
+    <span th:if="${whitelistedVulnerabilities.hasUnapprovedEntries() || whitelistedVulnerabilities.hasEntriesRequiringReview()}">
+        <p><b>WARNING: Some <a href="#whitelistedVulnerabilities">whitelisted vulnerabilities</a> require review and/or approval.</b></p>
+    </span>
 
     <p>
         <ul>
@@ -114,7 +117,7 @@
                 <td><span th:text="${vulnerability.whitelistingReason}">This is the whitelisting justification</span></td>
                 <td th:if="${vulnerability.requiresReview()}"><b>OVERDUE</b></td>
                 <td th:if="${!vulnerability.requiresReview()}"><span th:text="${vulnerability.nextReviewDate}">Review date</span></td>
-                <td th:if="${!vulnerability.isApproved()}"><b>URGENT - REQUIRES APPROVAL</b></td>
+                <td th:if="${!vulnerability.isApproved()}"><b>REQUIRES APPROVAL</b></td>
                 <td th:if="${vulnerability.isApproved()}"><span th:text="${vulnerability.approvedBy}">Approver</span><br/><span th:text="${vulnerability.approvalDate}">Approval date</span></td>
             </tr>
         </tbody>
